RESOLVED FIXED 208112
[LFC][IFC][Floats] Fix float boxes embedded to unbreakable inline runs.
https://bugs.webkit.org/show_bug.cgi?id=208112
Summary [LFC][IFC][Floats] Fix float boxes embedded to unbreakable inline runs.
zalan
Reported 2020-02-23 14:03:30 PST
text_<float box></float box>_content -> potentially intrusive float embedded to [text_][_content]
Attachments
Patch (25.34 KB, patch)
2020-02-23 14:16 PST, zalan
no flags
Unbreakable content with floats (534.87 KB, image/png)
2020-02-23 14:23 PST, zalan
no flags
Mix of breakable and unbreakable content (543.15 KB, image/png)
2020-02-23 14:24 PST, zalan
no flags
Floats with unbreakable content (584.80 KB, image/png)
2020-02-23 17:25 PST, zalan
no flags
Floats with breakable and unbreakable content (584.80 KB, image/png)
2020-02-23 17:26 PST, zalan
no flags
test case ^^ (588 bytes, text/html)
2020-02-23 17:27 PST, zalan
no flags
Patch (25.08 KB, patch)
2020-02-23 17:35 PST, zalan
no flags
Floats with breakable and unbreakable content (559.86 KB, image/png)
2020-02-23 17:38 PST, zalan
no flags
Patch (25.10 KB, patch)
2020-02-24 14:42 PST, zalan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-23 14:03:48 PST
zalan
Comment 2 2020-02-23 14:16:04 PST
zalan
Comment 3 2020-02-23 14:23:31 PST
Created attachment 391500 [details] Unbreakable content with floats This is a comparison of how floats embedded to unbreakable content is rendered by browsers.
zalan
Comment 4 2020-02-23 14:24:31 PST
Created attachment 391501 [details] Mix of breakable and unbreakable content
zalan
Comment 5 2020-02-23 17:25:44 PST
Created attachment 391504 [details] Floats with unbreakable content
zalan
Comment 6 2020-02-23 17:26:06 PST
Created attachment 391505 [details] Floats with breakable and unbreakable content
zalan
Comment 7 2020-02-23 17:27:03 PST
Created attachment 391506 [details] test case ^^
zalan
Comment 8 2020-02-23 17:35:28 PST
zalan
Comment 9 2020-02-23 17:38:58 PST
Created attachment 391508 [details] Floats with breakable and unbreakable content
zalan
Comment 10 2020-02-24 14:42:59 PST
WebKit Commit Bot
Comment 11 2020-02-24 16:57:20 PST
The commit-queue encountered the following flaky tests while processing attachment 391581 [details]: editing/spelling/spellcheck-paste-continuous-disabled.html bug 208016 (authors: g.czajkowski@samsung.com and mark.lam@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 12 2020-02-24 16:57:47 PST
The commit-queue encountered the following flaky tests while processing attachment 391581 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 13 2020-02-24 17:42:52 PST
Comment on attachment 391581 [details] Patch Clearing flags on attachment: 391581 Committed r257291: <https://trac.webkit.org/changeset/257291>
WebKit Commit Bot
Comment 14 2020-02-24 17:42:54 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 15 2020-02-24 23:39:35 PST
Note You need to log in before you can comment on or make changes to this bug.