[LFC][IFC][Floats] Fix float boxes embedded to unbreakable inline runs. https://bugs.webkit.org/show_bug.cgi?id=208112 <rdar://problem/59709701>

Reviewed by Antti Koivisto.

This patch fixes the cases when the float is embedded to otherwise unbreakable inline content.
e.g. "text_<div style="float: left"></div>_content"

The logic goes like this:
1. collect the floats inside the unbreakable candidate content
2. mark them intrusive if they potentially influence the current line
3. at handleFloatsAndInlineContent(), adjust available width with the intrusive floats first
4. feed the inline content to the LineBreaker
6. commit the float content based on the line breaking result (commit none, partially, all).
(Note that this algorithm produces a different layout compared to WebKit trunk. It mostly matches FireFox though.)

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthForConstraint const):
(WebCore::Layout::InlineFormattingContext::setDisplayBoxesForLine):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::moveLogicalLeft):
(WebCore::Layout::LineBuilder::moveLogicalRight):
* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):
(WebCore::Layout::nextWrapOpportunity):
(WebCore::Layout::LineCandidate::FloatContent::append):
(WebCore::Layout::LineLayoutContext::layoutLine):
(WebCore::Layout::LineLayoutContext::close):
(WebCore::Layout::LineLayoutContext::nextContentForLine):
(WebCore::Layout::LineLayoutContext::addIntrusiveFloats):
(WebCore::Layout::LineLayoutContext::revertIntrusiveFloats):
(WebCore::Layout::LineLayoutContext::handleFloatsAndInlineContent):
(WebCore::Layout::isLineConsideredEmpty): Deleted.
(WebCore::Layout::LineLayoutContext::tryAddingFloatContent): Deleted.
(WebCore::Layout::LineLayoutContext::tryAddingInlineItems): Deleted.
* layout/inlineformatting/LineLayoutContext.h:


Canonical link: https://commits.webkit.org/221112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257291 268f45cc-cd09-0410-ab3c-d52691b4dbfc